# ChangeLog for sys-libs/ss
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.69 2008/06/14 10:11:27 angelos Exp $

  14 Jun 2008; Christoph Mende <angelos@gentoo.org> ss-1.40.9.ebuild:
  Stable on amd64, bug #225239

  12 Jun 2008; Tobias Klausmann <klausman@gentoo.org> ss-1.40.9.ebuild:
  Stable on alpha, bug #225239, thanks to Matt Turner for testing

  09 Jun 2008; Brent Baude <ranger@gentoo.org> ss-1.40.9.ebuild:
  Marking ss-1.40.9 ppc64 for bug 225239

  09 Jun 2008; Raúl Porcel <armin76@gentoo.org> ss-1.40.9.ebuild:
  ia64/sparc/x86 stable wrt #225239

  09 Jun 2008; Mike Frysinger <vapier@gentoo.org> ss-1.40.10.ebuild:
  Use linker scripts like e2fsprogs #225297 by Mart Raudsepp.

  08 Jun 2008; nixnut <nixnut@gentoo.org> ss-1.40.9.ebuild:
  Stable on ppc wrt bug 225239

  07 Jun 2008; Jeroen Roovers <jer@gentoo.org> ss-1.40.9.ebuild:
  Stable for HPPA (bug #225239).

*ss-1.40.10 (07 Jun 2008)

  07 Jun 2008; Mike Frysinger <vapier@gentoo.org> +ss-1.40.10.ebuild:
  Version bump #225161 by Krzysztof Olędzki.

  26 May 2008; Raúl Porcel <armin76@gentoo.org> ss-1.40.8.ebuild:
  ia64 stable wrt #213588

  01 May 2008; Markus Meier <maekke@gentoo.org> ss-1.40.8.ebuild:
  amd64/x86 stable, bug #213588

  30 Apr 2008; Tobias Klausmann <klausman@gentoo.org> ss-1.40.8.ebuild:
  Stable on alpha, bug #213588

  27 Apr 2008; Jeroen Roovers <jer@gentoo.org> ss-1.40.8.ebuild:
  Stable for HPPA (bug #213588).

*ss-1.40.9 (27 Apr 2008)

  27 Apr 2008; Mike Frysinger <vapier@gentoo.org> +ss-1.40.9.ebuild:
  Version bump.

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> ss-1.40.6.ebuild:
  Stable for HPPA too.

  16 Mar 2008; Samuli Suominen <drac@gentoo.org> ss-1.40.6.ebuild:
  amd64 stable

  16 Mar 2008; Raúl Porcel <armin76@gentoo.org> ss-1.40.6.ebuild:
  alpha/ia64/sparc/x86 stable

  16 Mar 2008; Mike Frysinger <vapier@gentoo.org> ss-1.40.8.ebuild: