@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ss-1.40.9.ebuild,v 1.8 2008/06/18 08:46:52 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ss-1.40.11.ebuild,v 1.1 2008/06/18 09:17:08 vapier Exp $
 
 EAPI="prefix"
 
@@ -33,12 +33,20 @@ src_unpack() {
 	epatch "${FILESDIR}"/${PN}-1.39-makefile.patch
 	epatch "${FILESDIR}"/${PN}-1.40.5-darwin-makefile.patch
 
+	# make sure we error out if com_err is attempted to be built
+	rm -f lib/et/*.c
+
 	case ${CHOST} in
 		*-linux-gnu|*-solaris*|*-*bsd*)
-	# since we've split out com_err/ss into their own ebuilds, we
-	# need to fake out the local files.  let the toolchain find them.
-	echo "GROUP ( ${EPREFIX}/usr/$(get_libdir)/libcom_err.a )" > lib/libcom_err.a
-	echo "GROUP ( ${EPREFIX}/usr/$(get_libdir)/libcom_err.so )" > lib/libcom_err.so
+		# since we've split out com_err/ss into their own ebuilds, we
+		# need to fake out the local files.  let the toolchain find them.
+		mkdir tc || die
+		echo "GROUP ( libcom_err.a )" > tc/libcom_err.a
+		echo "GROUP ( libcom_err.so )" > tc/libcom_err.so
+		sed -i \
+			-e '/^LIBCOM_ERR/s:$(LIB):$(top_builddir)/tc:' \
+			MCONFIG.in || die
+		ln -s $(type -P compile_et) lib/et/compile_et
 		;;
 	esac
 }
